fixed 3 digid numbers being too big  problem

--- a/src/scss/1-abstracts/_variables.scss
+++ b/src/scss/1-abstracts/_variables.scss
@@ -12,7 +12,7 @@ $mostly-black-blue: hsl(234, 17%, 12%);
 // Typography
 $ff-primary: 'Red Hat Text', sans-serif;
 $fs-primary: 0.875rem;
-$fs-numbers: clamp(2rem, 10vw, 5.5rem);
+$fs-numbers: clamp(1.75rem, 7.5vw, 5rem);
 $fs-units: clamp(0.25rem, 2vw, 1rem);
 $spacing-units: clamp(0.125rem, 1vw, 0.375rem);
 $fs-title: clamp(1.25rem, 5vw, 1.75rem);
@@ -26,3 +26,5 @@ $countdown-padding-left: 1.5rem;
 $tile-padding-vertical: clamp(1rem, 0vw, 1.5rem);
 // Border radius
 $radius-tile: clamp(5px, 0vw, 10px);
+// Sizes
+$size-diagonal: clamp(0.625rem, 2.5vw, 1.375rem);
